# ROS2-Flutter-Package

./: .gitignore  README.md  ffigen.yaml  ffigen_rcl.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ros2_flutter_package_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  wifiLock.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: ros2_flutter_package.podspec
ios/Classes/: ros2_flutter_package.c
lib/: ros2_flutter_package.dart  ros2_flutter_package_bindings_generated.dart  ros2_flutter_package_rcl_bindings_generated.dart  ros2_publisher.dart
linux/: CMakeLists.txt
macos/: ros2_flutter_package.podspec
ros2_ws/: README.md  build_colcon_android.sh  build_test.sh  ros2-flutter.repos
src/: CMakeLists.txt  ros2_flutter_package.c
